fix(frontend): fixes cropped body in mobile

--- a/apps/frontend/src/app/globals.css
+++ b/apps/frontend/src/app/globals.css
@@ -22,7 +22,7 @@
     "header"
     "main";
   grid-template-columns: 1fr;
-  grid-template-rows: 64px calc(100% - 64px);
+  grid-template-rows: 64px calc(100dvh - 64px);
 }
 
 .to-do-page-layout {
@@ -30,7 +30,7 @@
     "td-header"
     "td-task-list";
   grid-template-columns: 1fr;
-  grid-template-rows: 64px calc(100vh - 64px);
+  grid-template-rows: 64px calc(100dvh - 64px);
 }
 
 /** Main - Grid Area  */
@@ -79,7 +79,7 @@
         240px,
         380px
       );
-    grid-template-rows: 64px 1fr;
+    grid-template-rows: 64px minmax(1fr, calc(100dvh - 128px));
     gap: 1rem;
   }
 }
